--- a/package.json
+++ b/package.json
@@ -6,13 +6,24 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
+    ]
   },
   "dependencies": {
+    "@testing-library/react-native": "^12.0.0-rc.0",
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
+    "jest": "^29.4.3",
+    "jest-expo": "^47.0.1",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-native": "0.70.5",
+    "react-native-renderer": "^15.5.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
